--- a/nucleo-f072.ioc
+++ b/nucleo-f072.ioc
@@ -42,7 +42,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=RD
 PA0.Locked=true
-PA0.Signal=GPIO_Input
+PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=WR
 PA1.Locked=true
@@ -129,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
